<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textInicioNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/textInicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnActividad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="192dp"
        android:text="@string/act1"
        app:layout_constraintStart_toStartOf="@+id/textInicioNombre"
        app:layout_constraintTop_toBottomOf="@+id/textInicioNombre" />

    <Button
        android:id="@+id/btnActividad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="268dp"
        android:text="@string/act2"
        app:layout_constraintStart_toStartOf="@+id/textInicioNombre"
        app:layout_constraintTop_toBottomOf="@+id/textInicioNombre" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:text="@string/exit"
        app:layout_constraintStart_toEndOf="@+id/btnActividad2"
        app:layout_constraintTop_toBottomOf="@+id/btnActividad2" />
</androidx.constraintlayout.widget.ConstraintLayout>