<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">

    <Button
        android:id="@+id/btnExit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:text="@string/exit"
        app:layout_constraintStart_toEndOf="@+id/btnActividad2"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />

    <TextView
        android:id="@+id/textPrincipalActivity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="28dp"
        android:text="@string/title1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrincipalActivity1" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textPrincipalActivity1" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <TextView
        android:id="@+id/textDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="/"
        app:layout_constraintStart_toEndOf="@+id/editTextDay"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textDate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:text="/"
        app:layout_constraintStart_toEndOf="@+id/editTextDay"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/provincia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDate" />

    <EditText
        android:id="@+id/editTextDay"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextMonth"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editTextDay"
        app:layout_constraintTop_toTopOf="@+id/editTextDay" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editTextDay"
        app:layout_constraintTop_toTopOf="@+id/editTextDay" />

    <TextView
        android:id="@+id/textSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/sex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProvincia" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="337dp"
        android:layout_height="86dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/textSexo"
        app:layout_constraintTop_toBottomOf="@+id/textProvincia">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/textKnowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/knowledge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSexo" />

    <CheckBox
        android:id="@+id/cbPHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PHP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textKnowledge" />

    <CheckBox
        android:id="@+id/cbJAVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="JAVA"
        app:layout_constraintStart_toEndOf="@+id/cbPHP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textKnowledge" />

    <CheckBox
        android:id="@+id/cbHTML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="HTML"
        app:layout_constraintStart_toEndOf="@+id/cbJAVA"
        app:layout_constraintTop_toTopOf="@+id/cbJAVA" />

    <CheckBox
        android:id="@+id/cbCSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="CSS"
        app:layout_constraintStart_toEndOf="@+id/cbHTML"
        app:layout_constraintTop_toTopOf="@+id/cbJAVA" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="56dp"
        android:text="@string/evaluate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbJAVA" />

    <TextView
        android:id="@+id/textViewCandidates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/candidates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />

    <TextView
        android:id="@+id/textNumCandidates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/textViewCandidates"
        app:layout_constraintTop_toTopOf="@+id/textViewCandidates" />

</androidx.constraintlayout.widget.ConstraintLayout>